[gd_scene load_steps=6 format=3 uid="uid://ddkvohnxbwq22"]

[ext_resource type="Script" uid="uid://chof8xndnsfpj" path="res://Scenes/CellScene/cell_scene.gd" id="1_enmig"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="2_fu8yw"]
[ext_resource type="PackedScene" uid="uid://bbo8dutfowpc6" path="res://Scenes/CellScene/parts/StoryNarration.tscn" id="3_y10y4"]
[ext_resource type="PackedScene" uid="uid://urjnikfy6y5j" path="res://Scenes/CellScene/parts/CellRender.tscn" id="4_h1wtw"]

[sub_resource type="ViewportTexture" id="ViewportTexture_y10y4"]
viewport_path = NodePath("RenderSubviewport")

[node name="CellScene" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enmig")

[node name="ColorBG" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("ViewportTexture_y10y4")
expand_mode = 1

[node name="BtnControls" parent="." instance=ExtResource("2_fu8yw")]
layout_mode = 2
a_btn_title = "LOGIN"
b_btn_title = "TURN AROUND"
b_btn_icon = 16
c_btn_title = "Action"

[node name="StoryNarration" parent="." instance=ExtResource("3_y10y4")]
modulate = Color(1, 1, 1, 0.262745)
layout_mode = 2

[node name="RenderSubviewport" type="SubViewport" parent="."]
own_world_3d = true
anisotropic_filtering_level = 0
fsr_sharpness = 2.0
size = Vector2i(1920, 1080)

[node name="CellSceneRender" parent="RenderSubviewport" instance=ExtResource("4_h1wtw")]
enable_lowlevel_lighting = true
enable_dust_particles = false
power_computer = true
power_terminal = true

[node name="FadeOverlay" type="ColorRect" parent="."]
visible = false
z_index = 100
layout_mode = 2
color = Color(0, 0, 0, 1)
